--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_pages.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_pages.html
@@ -38,8 +38,8 @@
                 <li><a href="{% url 'edit_course_page' group_id activity_node.pk %}">Edit</a></li>
                 <li><a title="Edit Content" class="edit_res_unit">{% trans " Edit Content" %}</a></li>
                 <li><a title="Edit Interaction Settings" class="edit-interaction">{% trans "Interaction Settings" %}</a></li>
-                <li><a title="add admin page" class="add-admin-page">{% trans "add-admin-page" %}</a></li>
-                <li><a title="add help page" class="add-help-page">{% trans "add-help-page" %}</a></li>
+                <li><a title="add admin page" class="add-admin-page">{% trans "Link Teacher's page" %}</a></li>
+                <li><a title="add help page" class="add-help-page">{% trans "Link Help page" %}</a></li>
                 <li><a href="{% url 'all_translations' group_id activity_node.pk %}" target="_blank">Alternate Language</a></li>
                 </ul>
 
@@ -74,6 +74,8 @@
             {% endif %}
             {% if user.is_authenticated %}
             <a class="right orange-button-template" href="{% url 'create_course_page' group_id %}"><i class="fi-plus"></i> Add</a>
+            <a class="right orange-button-template" href="{% url 'create_course_page_info'  group_id 'Info' %}"><i class="fi-plus"></i> Add Teacher's page</a>
+            <a class="right orange-button-template" href="{% url 'create_course_page_info' group_id 'Info' %}"><i class="fi-plus"></i> Add Help page</a>
             {% endif %}
 
 
