Showing units under module in detail view.

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/explore_2017.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/explore_2017.html
@@ -33,7 +33,8 @@
 				</a>
 
 				<a class="secondary-header-button right" style="float:right" href="{% url 'unit_create_edit' group_id %}"><i class="fa fa-plus-circle"></i>{% trans " Create Course Unit" %}</a>
-				<a class="secondary-header-button right" style="float:right" href="{% url 'module_create_edit' group_id %}"><i class="fa fa-plus-circle"></i>{% trans " Create Module" %}</a>
+
+				<a class="secondary-header-button right" style="float:right" href="{% url 'module_create' group_id %}"><i class="fa fa-plus-circle"></i>{% trans " Create Module" %}</a>
 
 			</div>
 		</div>
