--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/module_form.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/module_form.html
@@ -8,6 +8,6 @@
 
 
 {% block body_content %}
-    {% include 'ndf/widget_node_form.html' with post_url=post_url node_obj=node %}
+    {% include 'ndf/widget_node_form.html' with post_url=post_url node_obj=node_obj %}
 {% endblock %}
 
