--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/add_asset.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/add_asset.html
@@ -60,8 +60,10 @@
         <div class="small-10 columns left">
              {% if asset_obj.tags %}
                 {% for tag in asset_obj.tags %}
+                    {% if tag != "asset@asset" %}
                         <small><label class="tag-ele">
-                    <a href="{% url 'tag_info' group_id tag %}">{{tag}} </a></label></small>
+                        <a href="{% url 'tag_info' group_id tag %}">{{tag}} </a></label></small>
+                    {% endif %}
                 {% endfor %} 
             {% else %}
                 <i><small><label>{% trans "No tags defined yet!" %}</label></small></i>
@@ -137,7 +139,6 @@
         </div>
 
         {% endif %}
-
 
     <div class="asset-content-area"{% if not asset_obj %} style="display:none"{% endif %}>
         {% if not edit %}
