--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_tags.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_tags.html
@@ -58,7 +58,9 @@
 				<div class="row added-tags-div">
 					<div id="added_tags" class="small-9 small-push-3 columns">
 						{% for each_tag in node.tags %}
-							<div class="tags label radius info">{{each_tag}}<i title="Remove this tag" class="fi-x-circle remove-tag"></i></div>
+							{% if each_tag != "asset@asset" %}
+								<div class="tags label radius info">{{each_tag}}<i title="Remove this tag" class="fi-x-circle remove-tag"></i></div>
+							{% endif %}
 						{% endfor %}
 					</div>
 				</div>
