ratings added in activity page detail

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_pages.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_pages.html
@@ -26,7 +26,8 @@
             <div class="small-8 columns">
                 <h4 class="page-name">{{activity_node.name}}</h4>
             </div>
-            
+                        {% include 'ndf/rating.html' with node=activity_node %}
+              
             {% check_is_gstaff groupid request.user as is_gstaff %}
             {% if activity_node.created_by == request.user.id or is_gstaff %}
             <div class="small-3 columns right">
