alt_others object scope

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/asset_content_detail.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/asset_content_detail.html
@@ -446,7 +446,7 @@ $("#alt_types").change(function(){
           sel_alt_fr_type =  $('.alt-size-type').find(':selected').attr('data-opts');
           formData.append('if_alt_file','True');
           formData.append('sel_alt_value',sel_alt_fr_type);
-          formData.append('alt_file_type','alt_other');
+          formData.append('alt_file_type','alt_others');
         }
         
         if(!"{{asset_obj}}"){
