Related help, Translate, Discuss options have been added to activity player

--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/themes/clix/clix2017.css
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/themes/clix/clix2017.css
@@ -3301,3 +3301,8 @@ ul.nav_menu_1 li:hover {
 .activity-title > li.active {
   background: rgba(116, 0, 255, 0.31);
 }
+
+/* line 3480, ../../../scss/_clix2017.scss */
+.activity_page_rendered {
+  margin-top: 20px;
+}
