--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/test_template.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/test_template.html
@@ -52,12 +52,19 @@
           </div>
           <div class="small-9 columns">
             <div class="course_editor_section">
+              <div class="input_links">
+              <a href="#">Discuss</a>
+              <a href="#"> Related Help</a>
+              <a href="#">Translate</a>
+              </div>
+              <div class="activity_page_rendered">
               Lorem Ipsum
               "Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."
               "There is no one who loves pain itself, who seeks after it and wants to have it, simply because it is pain..."
 
               What is Lorem Ipsum?
               Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+              </div>
             </div>
           </div>
         </div>
