validations for help pages

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_pages.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_pages.html
@@ -41,11 +41,16 @@
                 <li><a title="add admin page" class="add-admin-page">{% trans "Link Teacher's page" %}</a></li>
                 <li><a title="add help page" class="add-help-page">{% trans "Link Help page" %}</a></li>
                 <li><a href="{% url 'all_translations' group_id activity_node.pk %}" target="_blank">Alternate Language</a></li>
+                {% get_relation_value activity_node.pk 'has_admin_page' as grel_admin %}
+                {% get_relation_value activity_node.pk 'has_help' as grel_help %}
+                {% if grel_admin.grel_id %}
                 <li><a class="view-admin-page" data-current-activity-id="" > View Teacher's page</a></li>
+                {% endif %}
+                {% if grel_help.grel_id %}
                 <li><a class="view-help-page" data-current-activity-id="" > View Help page</a></li>
+                {% endif %}
 
                 </ul>
-
             </div>
             {% endif %}
         </div>
