--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/themes/clix/clix2017.css
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/themes/clix/clix2017.css
@@ -3393,3 +3393,115 @@ ul.nav_menu_1 li:hover {
   color: #FF980D;
   text-shadow: 0 0 1px #333;
 }
+
+/**
+ * Sass styles related to unit cards
+ */
+/* line 3579, ../../../scss/_clix2017.scss */
+.unit_card {
+  width: 300px;
+  height: 300px;
+  color: #000;
+  padding: 15px;
+  margin: 10px;
+  cursor: pointer;
+  border-radius: 5px;
+  font-size: 14px;
+  border: 2px solid #d5d5d5;
+  position: relative;
+}
+/* line 3591, ../../../scss/_clix2017.scss */
+.unit_card:hover {
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
+}
+/* line 3595, ../../../scss/_clix2017.scss */
+.unit_card .unit_status {
+  position: absolute;
+  right: 0px;
+  top: -10px;
+  height: 25px;
+  padding: 2px 10px;
+  line-height: 20px;
+  border-radius: 3px;
+  letter-spacing: 0.6px;
+}
+/* line 3606, ../../../scss/_clix2017.scss */
+.unit_card .unit_header {
+  display: table;
+}
+/* line 3608, ../../../scss/_clix2017.scss */
+.unit_card .unit_header .unit_banner {
+  display: table-cell;
+  border-radius: 5px;
+  height: 50px;
+  width: 50px;
+  margin-right: 10px;
+}
+/* line 3615, ../../../scss/_clix2017.scss */
+.unit_card .unit_header .unit_title {
+  display: table-cell;
+  font-size: 20px;
+  font-weight: 500;
+  letter-spacing: 0.6px;
+  margin: 0px 0px 12px;
+  width: 200px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  vertical-align: middle;
+}
+/* line 3628, ../../../scss/_clix2017.scss */
+.unit_card .unit_desc {
+  display: block;
+  /* Fallback for non-webkit */
+  display: -webkit-box;
+  height: 58.8px;
+  /* Fallback for non-webkit */
+  max-width: 400px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  font-size: 14px;
+  line-height: 1.4;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  margin: 10px 0px 20px;
+}
+/* line 3643, ../../../scss/_clix2017.scss */
+.unit_card .unit_breif .unit_breif_row i {
+  margin-right: 10px;
+  color: #99aaba;
+}
+/* line 3649, ../../../scss/_clix2017.scss */
+.unit_card .unit_actions {
+  border-top: 1px solid #ccc;
+  margin: 20px 0px 0px;
+  padding: 5px 0px;
+}
+
+/*
+   Common css
+ */
+/* line 3659, ../../../scss/_clix2017.scss */
+.text-button-blue {
+  background-color: transparent;
+  color: #00A9EE;
+  padding: 3px 10px;
+  font-size: 16px;
+  letter-spacing: 0.7px;
+  line-height: 25px;
+}
+
+/**
+    Status styles added for the unit styles.
+ */
+/* line 3678, ../../../scss/_clix2017.scss */
+.in-progress-status {
+  color: #fff;
+  background-color: #fd9e29;
+}
+
+/* line 3683, ../../../scss/_clix2017.scss */
+.in-complete-status {
+  color: #fff;
+  background-color: #fd9e29;
+}
